[package]
name = "flexllama-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
axum-server = "0.7.2"
chrono = "0.4.42"
cors = "0.1.0"
http = "1.3.1"
mime_guess = "2.0.5"
ratatui = "0.29.0"
ratzilla = "0.1.0"
reqwest = {version="0.12.23", features=["json","stream"]}
serde = "1.0.219"
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["full"]}
tower-http = {version="0.6.6", features=["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
